Last contrast fix

--- a/_scss/_document.scss
+++ b/_scss/_document.scss
@@ -83,7 +83,7 @@ a:focus {
 }
 
 a {
-  color: $blue-text;
+  color: $charcoal;
 
   &:hover {
     text-decoration: underline;
